--- a/public/login.html
+++ b/public/login.html
@@ -23,18 +23,21 @@
 <body class="poppins">
     <section class="lg:w-[1440px] lg:h-[900px]">
         <div class="grid lg:grid-cols-2 sm:grid-cols-1">
-            <div >
+            <div>
                 <div>
-                    <img src="./icons/logo.svg" alt="" srcset="" class="w-[76px] h-[66px] lg:mt-[21px] lg:ml-[23px] sm:mt-[34px] sm:ml-[30px]">
+                    <img src="./icons/logo.svg" alt="" srcset=""
+                        class="w-[76px] h-[66px] lg:mt-[21px] lg:ml-[23px] sm:mt-[34px] sm:ml-[30px]">
                 </div>
-                <div class="lg:mt-[63px] lg:ml-[122px] lg:w-[431px] lg:h-[636px] mb-[114.88px] sm:mt-[21px] sm:mx-[27px]">
+                <div
+                    class="lg:mt-[63px] lg:ml-[122px] lg:w-[431px] lg:h-[636px] mb-[114.88px] sm:mt-[21px] sm:mx-[27px]">
                     <h2 class="text-[30px] font-medium pb-[22px]">Sign in</h2>
                     <span class="text-base font-regular ">
                         If you don’t have an account register
                     </span>
                     <br>
                     <span>
-                        You can <a href="http://127.0.0.1:5500/public/register.html" class="text-[#0C21C1]">Register here !</a>
+                        You can <a href="http://127.0.0.1:5500/public/register.html" class="text-[#0C21C1]">Register
+                            here !</a>
                     </span>
                     <div class="mt-[52px]">
                         <form action="#">
@@ -43,14 +46,15 @@
                                 <div class="flex flex-row mb-[7px]">
                                     <img src="./icons/message.svg" alt="">
                                     <input type="text" placeholder="Enter your email address"
-                                        class="ml-[10px] font-regular">
+                                        class="ml-[10px] font-regular" name="username">
                                 </div>
                             </div>
                             <div class="mt-[49px] border-b-2 border-[#000842]">
                                 <label for="" class="font-medium text-[13px]">Password</label>
                                 <div class="flex flex-row mb-[7px]">
                                     <img src="./icons/pass.svg" alt="">
-                                    <input type="text" placeholder="Enter your Password" class="ml-[10px] font-regular">
+                                    <input type="text" placeholder="Enter your Password" class="ml-[10px] font-regular"
+                                        name="password">
                                 </div>
                             </div>
                             <div class="mt-[17px] flex flex-row justify-between ">
@@ -60,7 +64,8 @@
                                 <a href="#" class="font-light text-xs text-[#4D4D4D]">Forgot Password ?</a>
                             </div>
                             <button
-                                class="mt-[60px] py-[14px] lg:px-[191px] sm:px-[133px] bg-[#0C21C1] rounded-[32px] text-[17px] font-medium text-white">Login</button>
+                                class="mt-[60px] py-[14px] lg:px-[191px] sm:px-[133px] bg-[#0C21C1] rounded-[32px] text-[17px] font-medium text-white"
+                                id="login-button">Login</button>
                         </form>
                     </div>
                     <div class="text-center mt-[39px]"><span class="font-medium text-[#B5B5B5]">or continue with</span>
@@ -101,5 +106,32 @@
         </div>
     </section>
 </body>
+<script>
+    async function postJSON(data) {
+        try {
+            const response = await fetch("http://3.95.239.60:9001/api/auth/login", {
+                method: "POST", // or 'PUT'
+                headers: {
+                    "Content-Type": "application/json",
+                },
+                body: JSON.stringify(data),
+            });
+
+            const result = await response.json();
+            console.log("Success:", result);
+        } catch (error) {
+            console.error("Error:", error);
+        }
+    }
+
+    const loginButton = document.getElementById("login-button");
+    loginButton.addEventListener("click", function () {
+        const data = {
+            username: document.querySelector('input[name="username"]').value,
+            password: document.querySelector('input[name="password"]').value,
+        };
+        postJSON(data);
+    });
+</script>
 
 </html>
