update lại giao diện

--- a/public/login.html
+++ b/public/login.html
@@ -36,7 +36,7 @@
                     </span>
                     <br>
                     <span>
-                        You can <a href="http://127.0.0.1:5500/public/register.html" class="text-[#0C21C1]">Register
+                        You can <a href="register.html" class="text-[#0C21C1]">Register
                             here !</a>
                     </span>
                     <div class="mt-[52px]">
